# FastAPI_Vue3-Finance

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.in
app/authenticated/: auth.py  manager.py  router.py
app/users/: models.py  schemas.py
migrations/: env.py
settings/: env_config.py
settings/database/: base.py  db.py
